--- a/Figure_4and5_method_A.ipynb
+++ b/Figure_4and5_method_A.ipynb
@@ -691,7 +691,7 @@
     "\n",
     "# ax.set_xlim(0, 1650)\n",
     "plt.xticks(np.arange(-3000, 1000, 750))\n",
-    "plt.savefig('figures/5A.pdf', dpi =600, bbox_inches='tight')"
+    "# plt.savefig('figures/5A.pdf', dpi =600, bbox_inches='tight')"
    ]
   },
   {
@@ -777,8 +777,8 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig('figures/4A.pdf', dpi =600, bbox_inches='tight') \n",
-    "plt.savefig('figures/4A.svg', dpi =600, bbox_inches='tight') \n",
+    "# plt.savefig('figures/4A.pdf', dpi =600, bbox_inches='tight') \n",
+    "# plt.savefig('figures/4A.svg', dpi =600, bbox_inches='tight') \n",
     "\n",
     "plt.show()"
    ]
@@ -864,8 +864,8 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig('figures/4B.pdf', dpi =600, bbox_inches='tight') \n",
-    "plt.savefig('figures/4B.svg', dpi =600, bbox_inches='tight') \n",
+    "# plt.savefig('figures/4B.pdf', dpi =600, bbox_inches='tight') \n",
+    "# plt.savefig('figures/4B.svg', dpi =600, bbox_inches='tight') \n",
     "\n",
     "plt.show()"
    ]
@@ -1346,8 +1346,8 @@
     "plt.ylabel('Hinge-advance contribution to flat slab extent (%)')\n",
     "plt.xlabel('')\n",
     "\n",
-    "plt.savefig('figures/5B.pdf', dpi =600, bbox_inches='tight')\n",
-    "plt.savefig('figures/5B.svg', dpi =600, bbox_inches='tight') "
+    "# plt.savefig('figures/5B.pdf', dpi =600, bbox_inches='tight')\n",
+    "# plt.savefig('figures/5B.svg', dpi =600, bbox_inches='tight') "
    ]
   },
   {
