--- a/Figure_4and5_method_B.ipynb
+++ b/Figure_4and5_method_B.ipynb
@@ -683,7 +683,7 @@
     "\n",
     "# ax.set_xlim(0, 1650)\n",
     "plt.xticks(np.arange(-3000, 1000, 750))\n",
-    "plt.savefig('figures/5C.pdf', dpi =600, bbox_inches='tight')"
+    "# plt.savefig('figures/5C.pdf', dpi =600, bbox_inches='tight')"
    ]
   },
   {
@@ -1337,8 +1337,8 @@
     "plt.ylabel('Hinge-advance contribution to flat slab extent (%)')\n",
     "plt.xlabel('')\n",
     "\n",
-    "plt.savefig('figures/5D.pdf', dpi =600, bbox_inches='tight')\n",
-    "plt.savefig('figures/5D.svg', dpi =600, bbox_inches='tight')"
+    "# plt.savefig('figures/5D.pdf', dpi =600, bbox_inches='tight')\n",
+    "# plt.savefig('figures/5D.svg', dpi =600, bbox_inches='tight')"
    ]
   },
   {
@@ -1512,7 +1512,7 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig('figures/FigureS2_!.pdf', dpi =600, bbox_inches='tight') \n",
+    "# plt.savefig('figures/FigureS2_!.pdf', dpi =600, bbox_inches='tight') \n",
     "\n",
     "plt.show()"
    ]
@@ -1661,7 +1661,7 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig('figures/FigureS2_B.svg', dpi =600, bbox_inches='tight') \n",
+    "# plt.savefig('figures/FigureS2_B.svg', dpi =600, bbox_inches='tight') \n",
     "\n",
     "plt.show()"
    ]
